<resources>
    <string name="app_name">DineIT</string>
    <string name="menu_tab_1">Restaurants</string>
    <string name="menu_tab_2">Orders</string>
    <string name="menu_tab_3">Notifications</string>
    <string name="menu_tab_4">Settings</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="forgot_password_message">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="menu_exit">Exit</string>
    <string name="phone_number">Phone Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="foods">Available foods</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menu_create_order">Create Order</string>
    <string name="show_foods">Show foods</string>
    <string name="uan_price">$%.2f</string>
    <string name="food_in_order">Food in order</string>
    <string name="order_number">Order #%d</string>
    <string name="order_id">Order identity</string>
    <string name="log_out">Logout</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="address_details">%s, %s, %s, %s</string>
    <string name="social_networks">Social Networks</string>
    <string name="apply_changes">Apply changes</string>
    <string name="change_info">Change Info</string>
    <string name="status">Order Status</string>
    <string name="ordered_time">Ordered Time</string>
    <string name="total_price">Total Price</string>
    <string name="qr_code">QR code for getting order</string>
    <string name="order_details">Order details</string>
</resources>
