<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
      
        <include layout="@layout/toolbar_main"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:id="@+id/tvOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_8"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:id="@+id/tvOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_8"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordered_time"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:id="@+id/tvOrderedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:id="@+id/tvOrderedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_8"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_8"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginBottom="@dimen/margin_8"/>

            <ImageView
                android:id="@+id/ivQRCode"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_16"
                android:background="@null" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="@dimen/margin_8"/>
            
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnShowFoods"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_16"
                android:gravity="center"
                android:text="@string/show_foods"
                android:layout_margin="@dimen/margin_16"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>