<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_32"
                android:background="@drawable/registration_bg_rounded_focused"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/signUpHint">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_48"
                android:layout_marginStart="@dimen/margin_48"
                android:background="@drawable/selector_button_rounded_background"
                android:enabled="false"
                android:stateListAnimator="@null"
                android:text="@string/register"
                android:textColor="@color/signUpTextFocused"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    
</RelativeLayout>