<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/registration_bg_rounded_focused"
            android:paddingBottom="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_16"
            android:paddingStart="@dimen/margin_16"
            android:paddingTop="@dimen/margin_8"
            android:textColorHint="@color/signUpHint">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/signUpTextFocused"
                android:textSize="@dimen/text_size_18"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/registration_bg_rounded_focused"
            android:paddingBottom="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_16"
            android:paddingStart="@dimen/margin_16"
            android:paddingTop="@dimen/margin_8"
            android:textColorHint="@color/signUpHint">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/signUpTextFocused"
                android:textSize="@dimen/text_size_18" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/signUpTextFocused"
            android:background="@drawable/selector_button_rounded_background"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_32"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:textSize="16sp"/>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/clpLogin"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
        
    </LinearLayout>

    <EditText
        android:id="@+id/etForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/forgot_password_message"
        android:textSize="@dimen/text_size_18"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textColor="@color/signUpTextFocused"
        android:layout_marginBottom="@dimen/margin_32"
        android:backgroundTint="@color/signUpTextFocused"/>

</RelativeLayout>