<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/toolbar_main" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused_primary"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/primary_text">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused_primary"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/primary_text">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused_primary"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/primary_text">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/registration_bg_rounded_focused_primary"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/primary_text">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:enabled="false"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_32"
                android:background="@drawable/registration_bg_rounded_focused_primary"
                android:paddingBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_16"
                android:paddingStart="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:textColorHint="@color/primary_text">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_size_18" />
            </android.support.design.widget.TextInputLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_16">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnChange"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"
                    android:background="@drawable/change_settings_btn_background"
                    android:text="@string/change_info"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
                
                <View
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnApply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:background="@drawable/selector_button_rounded_background"
                    android:text="@string/apply_changes"
                    android:textColor="@color/signUpTextFocused"
                    android:textSize="16sp"
                    android:enabled="false"
                    android:gravity="center"
                    android:layout_weight="1"/>
                
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    
</RelativeLayout>